Make footer text and help center name customizable

--- a/translations/en-us.json
+++ b/translations/en-us.json
@@ -4,8 +4,12 @@
   "main_site_link_description": "Hyperlink to main site for exiting support.",
   "main_site_link_text_label": "Hyperlink label",
   "main_site_link_text_description": "Label for above hyperlink",
+  "help_center_name_label": "Support site name",
+  "help_center_name_description": "e.g. Help Center, Support, Guide, FAQ",
   "phone_number_description": "Phone number to display at the top",
   "phone_number_label": "Phone number",
+  "footer_disclaimer_label": "Footer text",
+  "footer_disclaimer_description": "Text that goes into the footer, like a disclaimer.",
   "colors_group_label": "Colors",
   "brand_color_description": "Brand color for major navigational elements",
   "brand_color_label": "Brand color",
