Match search and Help Center headers

--- a/translations/en-us.json
+++ b/translations/en-us.json
@@ -2,8 +2,8 @@
   "custom_group_label": "Custom",
   "main_site_link_label": "Back hyperlink",
   "main_site_link_description": "Hyperlink to main site for exiting support.",
-  "main_site_link_text_label": "Hyperlink label",
-  "main_site_link_text_description": "Label for above hyperlink",
+  "help_center_subtitle_label": "Help Center subtitle",
+  "help_center_subtitle_description": "The subtitle of the Help Center",
   "help_center_name_label": "Support site name",
   "help_center_name_description": "e.g. Help Center, Support, Guide, FAQ",
   "phone_number_description": "Phone number to display at the top",
